2002-03-16  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model.c (gda_data_model_describe_column): fixed
	copy&paste code.

2002-03-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* idl/GNOME_Database.idl: changed Numeric type to match mike's
	proposals.

2002-03-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* idl/GNOME_Database.idl: added Numeric type.

	* libgda/gda-value.[ch] (gda_value_new_numeric): new function.
	(gda_value_get_numeric): new function.
	(gda_value_set_numeric): new function.

	* libgda/gda-row.[ch] (gda_field_set_numeric_value): new function.
	(gda_field_get_numeric_value): new function.

2002-03-12  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>

	* configure.in: don't check for the version of intltool.

2002-03-06  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-data-model.[ch]: added "describe_column" virtual method.
	(gda_data_model_describe_column): new function.
	(gda_data_model_class_init): initialize new member.

	* libgda/gda-data-model-array.c (gda_data_model_array_class_init):
	* libgda/gda-data-model-list.c (gda_data_model_list_class_init):
	initialize new member.

	* libgda/gda-recordset.c (gda_recordset_describe_column): new method.

	* libgda/gda-table.[ch] (gda_table_new_from_model): new function to
	create a GdaTable from a GdaDataModel.
	(gda_table_describe_column): new method.
	(gda_table_add_field): set number of columns on the underlying
	GdaDataModelArray class.
	(gda_table_add_data_from_model): new function.

	* providers/default/*: reworked to be based on GdaXmlDatabase, since
	the old default provider is now the GDA SQLite provider.

2002-03-05  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-row.[ch] (gda_field_attributes_new):
	(gda_field_attributes_free): new functions.

	* libgda/gda-table.[ch]: new class, which implements an in-memory
	representation of a whole table.

	* libgda/gda-xml-database.[ch]: rewritten to make use of the already
	existing interfaces, and not new ones.

	* doc/C/libgda-docs.sgml: