@@ -1,3 +1,12 @@
+2002-03-18  Gonzalo Paniagua Javier <gonzalo@gnome-db.org>
+
+	* providers/postgres/gda-postgres-provider.c:
+	* providers/postgres/gda-postgres-provider.h:
+	* providers/postgres/gda-postgres-recordset.c:
+	* providers/postgres/gda-postgres.h:
+	* providers/postgres/utils.c: implemented SCHEMA_FIELDS and changed
+	the way to map between PostgreSQL and libgda types.
+
 2002-03-16  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* libgda/gda-data-model.c (gda_data_model_describe_column): fixed
